@@ -1,4 +1,8 @@
 2011-06-04  Francis Galiegue <fgaliegue@gmail.com>
+	* server-src/planner.c: get text-based estimate string generation out of
+	  getsize()
+
+2011-06-04  Francis Galiegue <fgaliegue@gmail.com>
 	* server-src/planner.c: remove variables qname and qdevice
 
 2011-06-04  Francis Galiegue <fgaliegue@gmail.com>
